--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
-EMAIL_USER=yourgmail@gmail.com
-EMAIL_PASS=your_app_password
+EMAIL_USER=g1.alsmaeil@gmail.com
+EMAIL_PASS=dnbo sntc marw ayyt
 FRONTEND_URL=http://localhost:3000
 JWT_SECRET=secret_key_here
