--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   workmanager: ^0.9.0+3
   firebase_app_check: ^0.4.1+4
   supabase_flutter: ^2.0.0
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
