--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: news_watch
+name: scanner
 
-description: "A poject for news (Midad Training)"
+description: "A poject for Homs's finance"
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -66,6 +66,7 @@ dependencies:
   pdf: ^3.10.8
   printing: ^5.11.0
   path_provider: ^2.1.1
+  cunning_document_scanner: ^1.1.0
 
 
 dev_dependencies:
