--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,8 +68,11 @@ dependencies:
   path_provider: ^2.1.1
   cunning_document_scanner: ^1.1.0
   syncfusion_flutter_pdfviewer: ^28.1.33
+  file_picker: ^10.3.10
+  dotted_border: ^2.1.0
+  pdfx: ^2.5.0
 
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -90,6 +93,7 @@ flutter:
     - assets/translations/
     - assets/images/
     - assets/svg/
+    - assets/data/areas.json
 
   fonts:
     - family: Rubik
